<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">125372366068464</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb125372366068464</string>

    //twitter
    <string name="twitter_consumer_key" translatable="false">oRCjlrXW2CrqjLzelpxUy7MUJ</string>
    <string name="twitter_consumer_secret" translatable="false">PKoaUMpN2Ovj8HfqDtf6qLwBpY8wwWgUWioj5J27ERBXGrqLEs</string>

    <string name="navigation_header_name" translatable="false">Username</string>
    <string name="navigation_header_email" translatable="false">User Email</string>

    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="connection_succeed">Connect with success</string>
    <string name="error_authentication_canceled">Authentification abort</string>
    <string name="error_no_internet">No internet connexion</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="popup_message_confirmation_logout_account">Do you want to logout ?</string>
    <string name="popup_message_choice_yes">Log out</string>
    <string name="popup_message_choice_no">Stay logged</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="open">Open</string>

    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_map">Map</string>
    <string name="bottom_navigation_menu_workmate">Workmate</string>
    <string name="bottom_navigation_menu_list">List</string>
    <string name="tv_str_content_map" translatable="false">map ici</string>
    <string name="logo_for_app" translatable="false">Logo for app</string>
    <string name="is_twitter_logo" translatable="false">is Twitter logo</string>
    <string name="logo_facebook" translatable="false">logo facebook</string>
    <string name="logo_google" translatable="false">logo google</string>
    <string name="item_list_restaurants_distance">distance from</string>
    <string name="restaurant_address">address</string>
    <string name="item_list_restaurants_hours">opening hours</string>
    <string name="restaurant_name">name</string>
    <string name="item_list_restaurants_number_workmates">(0)</string>
    <string name="Downloading">Downloading…</string>
    <string name="places_api_google_key" translatable="false">AIzaSyAQIMmBdFBM6kVUJ5HyC7tpUXKbkIow_lI</string>
    <string name="an_error">An error happened !</string>
    <string name="closed">Closed</string>
    <string name="title_activity_details_restaurant" translatable="false">DetailsRestaurant</string>

    <string name="workmates_is_joining">Workmates is joining !</string>
    <string name="workmates_is_eating">Workmates is eating here !</string>
    <string name="workmates_is_doing_something">Workmates is doing something !</string>
    <string name="call">Call</string>
    <string name="website">website</string>
    <string name="like">Like</string>
    <string name="type_and_address">type and address</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="default_distance_display">seem 100m</string>
    <string name="radius_max">%dm/%dm max</string>
    <string name="tilt_max">%d/%d max</string>
    <string name="go4lunch_settings">Go4Lunch Settings</string>
    <string name="radius_settings_max_1500_m">Radius settings: max 1500 m</string>
    <string name="radius_is">Radius is</string>
    <string name="tilt">Tilt:</string>
    <string name="tilt_is">tilt is:</string>
    <string name="search_type">Search lunch type:</string>
    <string name="default_restaurant">Default (Restaurant)</string>
    <string name="bar">Bar</string>
    <string name="bakery">Bakery</string>
    <string name="save">Save</string>
</resources>