<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_your_lunch"
                    android:icon="@drawable/ic_baseline_restaurant_menu_24"
                    android:title="@string/your_lunch" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/ic_baseline_power_settings_new_24"
                    android:title="@string/log_out" />
            </group>
        </menu>
    </item>

</menu>