<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/go_for_lunch_background">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#38141414">

    <ImageView
        android:id="@+id/image_logo_go4lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cup_of_tea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_for_app" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_go4lunch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Have a nice lunch with co-workers !"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <LinearLayout
        android:id="@+id/linearLayout_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_radius_twitter_login"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/login_button_marginBottom"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/twitter_logo"
            android:contentDescription="@string/is_twitter_logo" />
        <Button
            android:id="@+id/button_login_with_twitter"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_twitter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_radius_facebook"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/login_button_marginBottom"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/facebook_logo"
            android:contentDescription="@string/logo_facebook" />
        <Button
            android:id="@+id/button_login_with_facebook"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_radius_google"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/login_button_marginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/logo_google"
            android:contentDescription="@string/logo_google" />
        <Button
            android:id="@+id/button_login_with_google"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_google"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>