<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_header"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/go_for_lunch_background">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38141414">

    <TextView
        android:id="@+id/nav_header_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/nav_header_margin_default"/>

    <ImageView
        android:id="@+id/nav_header_user_picture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_header_title_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/nav_header_margin_image"
        android:layout_marginTop="@dimen/nav_header_margin_image"
        android:layout_marginStart="@dimen/nav_header_margin_default"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/nav_header_username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/nav_header_margin_txt"
        app:layout_constraintStart_toEndOf="@id/nav_header_user_picture"
        app:layout_constraintTop_toTopOf="@id/nav_header_user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/nav_header_margin_txt"
        android:layout_marginStart="@dimen/nav_header_margin_txt"
        android:text="@string/navigation_header_name"/>

    <TextView
        android:id="@+id/nav_header_user_email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/nav_header_username_txt"
        app:layout_constraintStart_toStartOf="@id/nav_header_username_txt"
        app:layout_constraintEnd_toEndOf="@id/nav_header_username_txt"
        android:text="@string/navigation_header_email"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>