<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.TryDetails"
    android:background="#E68FAD"
    android:id="@+id/main_detail_restaurant_fragment_constraint_layout_try">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_restaurant_bottom_constraint_layout_try"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/restaurant_detail_picture_try"
            style="@style/item_list_restaurant_illustration_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/picture_star_rating_try"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toEndOf="@+id/restaurant_detail_name_try"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_picture_try" />

        <TextView
            android:id="@+id/restaurant_detail_name_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_picture_try" />

        <TextView
            android:id="@+id/type_and_address_try"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_and_address"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_name_try" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_baseline_check_circle_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/call_picture_try"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_baseline_phone_24"
        app:layout_constraintEnd_toStartOf="@+id/rating_star_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout_try" />

    <ImageView
        android:id="@+id/rating_star_picture_try"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_baseline_star_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout_try" />

    <ImageView
        android:id="@+id/website_picture_try"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_baseline_earth_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rating_star_picture_try"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout_try" />

    <TextView
        android:id="@+id/restaurant_telephone_text_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textSize="25sp"
        android:textColor="@color/google"
        app:layout_constraintEnd_toEndOf="@+id/call_picture_try"
        app:layout_constraintStart_toStartOf="@+id/call_picture_try"
        app:layout_constraintTop_toBottomOf="@+id/call_picture_try" />

    <TextView
        android:id="@+id/restaurant_rating_text_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/rating_star_picture_try"
        app:layout_constraintStart_toStartOf="@+id/rating_star_picture_try"
        app:layout_constraintTop_toBottomOf="@+id/rating_star_picture_try" />

    <TextView
        android:id="@+id/restaurant_website_text_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/website_picture_try"
        app:layout_constraintStart_toStartOf="@+id/website_picture_try"
        app:layout_constraintTop_toBottomOf="@+id/website_picture_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/phone_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="phonetext"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_telephone_text_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/pluscode_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pluscode"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/pricelevel_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="privelevel"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pluscode_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/reference_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="reference"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pricelevel_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/scope_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="scope"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reference_try" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/type_try"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="type"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scope_try" />

</androidx.constraintlayout.widget.ConstraintLayout>