<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#E68FAD"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_detail_restaurant_fragment_constraint_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_restaurant_bottom_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/restaurant_detail_picture"
            style="@style/item_list_restaurant_illustration_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/picture_star_rating"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintStart_toEndOf="@+id/restaurant_details_name"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_picture" />

        <TextView
            android:id="@+id/restaurant_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_picture" />

        <TextView
            android:id="@+id/restaurant_details_type_and_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_and_address"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_details_name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_baseline_check_circle_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/button_phone_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout">

        <ImageView
            android:id="@+id/call_picture"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_phone_24" />
        <!--        app:layout_constraintEnd_toStartOf="@+id/rating_star_picture"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout" />-->

        <TextView
            android:id="@+id/restaurant_details_telephone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/call"
            android:textColor="@color/google"
            android:textSize="25sp" />
        <!--        app:layout_constraintEnd_toEndOf="@+id/call_picture"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/call_picture"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/call_picture" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/detail_restaurant_bottom_constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout">

        <ImageView
            android:id="@+id/rating_star_picture"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_star_24" />
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout" />-->

        <TextView
            android:id="@+id/restaurant_details_rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/like"
            android:textColor="@color/google"
            android:textSize="25sp" />
        <!--        app:layout_constraintEnd_toEndOf="@+id/rating_star_picture"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/rating_star_picture"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/rating_star_picture" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/button_web_site_launcher"
        app:layout_constraintEnd_toEndOf="@+id/detail_restaurant_bottom_constraint_layout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout">

        <ImageView
            android:id="@+id/website_picture"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_earth_24" />
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/rating_star_picture"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/detail_restaurant_bottom_constraint_layout" />-->

        <TextView
            android:id="@+id/restaurant_details_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/website"
            android:textColor="@color/google"
            android:textSize="25sp" />
        <!--        app:layout_constraintEnd_toEndOf="@+id/website_picture"-->
        <!--        app:layout_constraintStart_toStartOf="@+id/website_picture"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/website_picture" />-->
    </LinearLayout>

    <TextView
        android:id="@+id/restaurant_details_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E68FAD"
        android:text="phonetext"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_phone_call" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/restaurant_details_pluscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pluscode"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_phone" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/restaurant_details_priceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="privelevel"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_pluscode" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/restaurant_details_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="reference"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_priceLevel" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/restaurant_details_scope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="scope"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_reference" />

    <TextView
        android:background="#E68FAD"
        android:id="@+id/restaurant_details_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="type"
        android:textColor="@color/google"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_details_scope" />

</androidx.constraintlayout.widget.ConstraintLayout>